# poetry-plugin-bundle

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yaml  main.yml  release.yaml  release.yml
src/poetry_bundle_plugin/: plugin.py
src/poetry_bundle_plugin/bundlers/: bundler.py  bundler_manager.py  venv_bundler.py
src/poetry_bundle_plugin/console/commands/bundle/: bundle_command.py  venv.py
src/poetry_plugin_bundle/: exceptions.py  plugin.py
src/poetry_plugin_bundle/bundlers/: archive_bundler.py  bundler.py  bundler_manager.py  venv_bundler.py
src/poetry_plugin_bundle/bundlers/utils/: platforms.py
src/poetry_plugin_bundle/console/commands/bundle/: archive.py  bundle_command.py  venv.py
src/poetry_plugin_bundle/utils/: platforms.py
tests/: conftest.py  helpers.py
tests/bundlers/: test_bundler_manager.py  test_venv_bundler.py
tests/console/: conftest.py
tests/console/commands/bundle/: test_venv.py
tests/fixtures/non_package_mode/: pyproject.toml
tests/fixtures/project_with_binary_wheel/: pyproject.toml
tests/fixtures/simple_project/: pyproject.toml
tests/fixtures/simple_project_with_dev_dep/: pyproject.toml
tests/fixtures/simple_project_with_editable_dep/: pyproject.toml
tests/fixtures/simple_project_with_editable_dep/bar/: pyproject.toml
tests/utils/: test_platforms.py
