[tool.poetry]
name = "poetry-plugin-bundle"
version = "1.3.0"
description = "Poetry plugin to bundle projects into various formats"
authors = ["Sébastien Eustace <sebastien@eustace.io>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "poetry_plugin_bundle", from = "src" }
]

include = [
    { path = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.6"
pytest = ">=7.1.2"
pytest-mock = ">=3.6.1"
mypy = ">=1.1.1"

# only used in github actions
[tool.poetry.group.github-actions]
optional = true
[tool.poetry.group.github-actions.dependencies]
pytest-github-actions-annotate-failures = "^0.1.7"

[tool.poetry.plugins."poetry.application.plugin"]
export = "poetry_plugin_bundle.plugin:BundleApplicationPlugin"


[tool.ruff]
fix = true
unfixable = [
    "ERA", # do not autoremove commented out code
]
target-version = "py37"
line-length = 88
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]
extend-exclude = [
    # External to the project's coding standards
    "tests/**/fixtures/*",
]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
known-first-party = ["poetry_plugin_bundle"]
required-imports = ["from __future__ import annotations"]


[tool.black]
target-version = ['py37']
preview = true

[tool.mypy]
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
explicit_package_bases = true
files = ["src", "tests"]
mypy_path = "src"
namespace_packages = true
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = [
  'cleo.*',
]
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = [
    "tests"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
